# p4-remove-ignored

./: Cargo.toml  README.md
docs/: pr-remove-ignored.xml
src/: main.rs
src/p4/: delete.rs  files.rs  fstat.rs  ignores.rs  mod.rs  where_.rs
