[package]
name = "p4-remove-ignored"
version = "0.1.1"
edition = "2021"
authors = ["Zero <nick@zero.dev>"]
description = "Remove files from a perforce depot that should be ignored by P4IGNORE."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.5.0"
